[gd_scene load_steps=24 format=3 uid="uid://dhtqpe8pcg80v"]

[ext_resource type="Script" path="res://scripts/menus/stats_panel/stats_panel.gd" id="1_gd13l"]
[ext_resource type="AudioStream" uid="uid://c125xdli2pv2h" path="res://audio/music/menus/level_up.mp3" id="2_6ysuc"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="2_vg3x4"]
[ext_resource type="Texture2D" uid="uid://d0khv3xfdmywv" path="res://graphics/ui/exclamation.png" id="3_ao33y"]
[ext_resource type="AudioStream" uid="uid://b24gjdohf73u2" path="res://audio/sfx/menu.ogg" id="3_iyrwx"]
[ext_resource type="SpriteFrames" uid="uid://gcii401b383q" path="res://graphics/animations/a_player.tres" id="3_usdlr"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="4_77yq4"]
[ext_resource type="Texture2D" uid="uid://ufmhvke6f8x8" path="res://graphics/ui/new_move_indicator.png" id="4_sak5l"]
[ext_resource type="Texture2D" uid="uid://pyq3r07txjk0" path="res://graphics/ui/minion_changed.png" id="5_jrvq8"]
[ext_resource type="PackedScene" uid="uid://cl2b2giyrbc0i" path="res://prefabs/ui/stats/stat_line_panel.tscn" id="5_lltfh"]
[ext_resource type="PackedScene" uid="uid://di4m6wwpbc3pl" path="res://prefabs/ui/stats/move_list_panel.tscn" id="6_w55pq"]
[ext_resource type="PackedScene" uid="uid://d23cu31e8s3s6" path="res://prefabs/ui/stats/equipment_panel.tscn" id="7_dsgm0"]
[ext_resource type="PackedScene" uid="uid://dqtu7xjqahxq" path="res://prefabs/ui/stats/minions_panel.tscn" id="8_3o74c"]
[ext_resource type="PackedScene" uid="uid://cm57i83oiea42" path="res://prefabs/ui/stats/edit_moves_panel.tscn" id="9_ue80h"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="10_sd4fn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vpob3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2h8xb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pwwl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hatjo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8jpyk"]

[sub_resource type="Animation" id="Animation_fdh2h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NewLevelLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../LevelUpLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../LevelUpLabel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(440, 47)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NewLevelLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../LevelUpLabel:theme_override_font_sizes/normal_font_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../StatsTitle:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0wt4n"]
resource_name = "level_up"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NewLevelLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.03333, 6.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../LevelUpLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../LevelUpLabel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.46667, 6.56667),
"transitions": PackedFloat32Array(1, 1.56917, 1),
"update": 0,
"values": [Vector2(440, 257), Vector2(440, 257), Vector2(440, 47)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NewLevelLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4.46667, 6.56667),
"transitions": PackedFloat32Array(2.21914, 1.10957),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../LevelUpLabel:theme_override_font_sizes/normal_font_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.9, 5.06667, 5.23333, 5.4, 5.56667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 42, 36, 32, 28, 24]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.46667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_level_up_anim_start"
}, {
"args": [],
"method": &"_level_up_anim_panel_fade_in"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../StatsTitle:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4.46667, 6.56667),
"transitions": PackedFloat32Array(1, 2.21914, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qpada"]
_data = {
"RESET": SubResource("Animation_fdh2h"),
"level_up": SubResource("Animation_0wt4n")
}

[node name="StatsPanelNode" type="Node2D"]
script = ExtResource("1_gd13l")
levelUpMusic = ExtResource("2_6ysuc")
tabChangeSfx = ExtResource("3_iyrwx")
unspentStatPtsIndicator = ExtResource("3_ao33y")
newMoveIndicator = ExtResource("4_sak5l")
minionChangedIndicator = ExtResource("5_jrvq8")
metadata/_edit_vertical_guides_ = [640.0]

[node name="StatsPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("2_vg3x4")

[node name="Panel" type="Panel" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vpob3")

[node name="StatsTitle" type="RichTextLabel" parent="StatsPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 9.0
offset_right = 350.0
offset_bottom = 59.0
grow_horizontal = 2
mouse_filter = 1
theme = ExtResource("4_77yq4")
bbcode_enabled = true
text = "[center]Combatant Name Here - Stats[/center]"
fit_content = true

[node name="SinglePageView" type="Panel" parent="StatsPanel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_2h8xb")

[node name="AnimatedCombatantSprite" type="AnimatedSprite2D" parent="StatsPanel/Panel/SinglePageView"]
position = Vector2(160, 44)
scale = Vector2(2, 2)
sprite_frames = ExtResource("3_usdlr")
animation = &"walk"

[node name="BackButton" parent="StatsPanel/Panel/SinglePageView" instance=ExtResource("10_sd4fn")]
custom_minimum_size = Vector2(70, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 6.0
offset_right = 35.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="StatLinePanel" parent="StatsPanel/Panel/SinglePageView" instance=ExtResource("5_lltfh")]
layout_mode = 1
offset_left = 40.0
offset_top = 78.0
offset_right = 600.0
offset_bottom = 458.0

[node name="MoveListPanel" parent="StatsPanel/Panel/SinglePageView" instance=ExtResource("6_w55pq")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -600.0
offset_top = 78.0
offset_right = -40.0
offset_bottom = 419.0
grow_horizontal = 0

[node name="MoveDetailsPanel" parent="StatsPanel/Panel/SinglePageView/MoveListPanel" index="2"]
anchors_preset = -1
anchor_left = -1.214
anchor_top = -0.243
anchor_right = 1.066
anchor_bottom = 2.118
offset_left = -0.159912
offset_top = 4.863
offset_right = 3.03992
offset_bottom = 11.019

[node name="EquipmentPanel" parent="StatsPanel/Panel/SinglePageView" instance=ExtResource("7_dsgm0")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -264.0
offset_right = 600.0
offset_bottom = -6.0
grow_vertical = 0

[node name="WeaponControl" parent="StatsPanel/Panel/SinglePageView/EquipmentPanel" index="0"]
offset_bottom = -131.0

[node name="WeaponEffects" parent="StatsPanel/Panel/SinglePageView/EquipmentPanel/WeaponControl" index="3"]
offset_bottom = 124.0
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
text = "[center]While Equipped, Before The User's Turn Starts:
+100% Phys Atk, +100% Magic Atk, +100% Resistance, +100% Affinity, and +100% Speed
Third Line[/center]"

[node name="Control" parent="StatsPanel/Panel/SinglePageView/EquipmentPanel" index="1"]
offset_top = -6.0
offset_bottom = -6.0

[node name="ArmorControl" parent="StatsPanel/Panel/SinglePageView/EquipmentPanel" index="2"]
offset_top = 128.0

[node name="ArmorEffects" parent="StatsPanel/Panel/SinglePageView/EquipmentPanel/ArmorControl" index="3"]
offset_bottom = 124.0
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/mono_font_size = 16
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
text = "[center]While Equipped, Before The User's Turn Starts:
+100% Phys Atk, +100% Magic Atk, +100% Resistance, +100% Affinity, and +100% Speed
Third Line[/center]"

[node name="ItemDetailsPanel" parent="StatsPanel/Panel/SinglePageView/EquipmentPanel" index="3"]
z_index = 1
offset_left = -40.0
offset_top = -479.0
offset_right = 680.0
offset_bottom = 6.0

[node name="MinionsPanel" parent="StatsPanel/Panel/SinglePageView" instance=ExtResource("8_3o74c")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -304.0
offset_right = -40.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0

[node name="VirtualKeyboard" parent="StatsPanel/Panel/SinglePageView/MinionsPanel/MinionView" index="6"]
offset_left = -636.0
offset_top = -336.0
offset_right = -1.0
offset_bottom = -332.0

[node name="TabbedView" type="Panel" parent="StatsPanel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5pwwl")

[node name="AnimatedCombatantSprite" type="AnimatedSprite2D" parent="StatsPanel/Panel/TabbedView"]
position = Vector2(160, 56)
scale = Vector2(2, 2)
sprite_frames = ExtResource("3_usdlr")
animation = &"walk"

[node name="BackButton" parent="StatsPanel/Panel/TabbedView" instance=ExtResource("10_sd4fn")]
custom_minimum_size = Vector2(80, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -72.0
offset_right = 40.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="TabContainer" type="TabContainer" parent="StatsPanel/Panel/TabbedView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 82.0
offset_right = -16.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_hatjo")
tab_alignment = 1
current_tab = 0

[node name="Stats" type="Control" parent="StatsPanel/Panel/TabbedView/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="StatLinePanel" parent="StatsPanel/Panel/TabbedView/TabContainer/Stats" instance=ExtResource("5_lltfh")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.5
offset_top = -267.0
offset_right = 355.5
offset_bottom = 189.0
grow_vertical = 2

[node name="Equipment" type="Control" parent="StatsPanel/Panel/TabbedView/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="EquipmentPanel" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment" instance=ExtResource("7_dsgm0")]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -461.5
offset_top = -267.5
offset_right = 458.5
offset_bottom = 212.5
grow_horizontal = 2
grow_vertical = 2
showEquipmentDetailsPanels = true

[node name="WeaponControl" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel" index="0"]
anchors_preset = 10
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 236.0
grow_vertical = 1

[node name="WeaponLabel" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/WeaponControl" index="0"]
offset_left = 2.0
offset_top = 2.0
offset_right = 97.0
offset_bottom = 28.0

[node name="WeaponSprite" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/WeaponControl" index="1"]
offset_left = 98.0
offset_top = 2.0
offset_right = 130.0
offset_bottom = 34.0

[node name="WeaponName" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/WeaponControl" index="2"]
offset_left = 140.0
offset_top = 4.0
offset_right = 412.0
offset_bottom = 28.0

[node name="WeaponEffects" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/WeaponControl" index="3"]
visible = false

[node name="WeaponDetailsPanel" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/WeaponControl" index="4"]
visible = true
offset_left = -2.0
offset_right = 928.0

[node name="Line2D" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/Control" index="0"]
points = PackedVector2Array(2, 0, 918, 0)

[node name="ArmorControl" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel" index="2"]
anchors_preset = 12
anchor_top = 1.0
offset_left = 0.0
offset_top = -225.0
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 0

[node name="ArmorLabel" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/ArmorControl" index="0"]
offset_left = 2.0
offset_right = 82.0

[node name="ArmorSprite" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/ArmorControl" index="1"]
offset_left = 98.0
offset_right = 130.0

[node name="ArmorName" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/ArmorControl" index="2"]
offset_left = 140.0
offset_right = 412.0

[node name="ArmorEffects" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/ArmorControl" index="3"]
visible = false

[node name="ArmorDetailsPanel" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/ArmorControl" index="4"]
visible = true

[node name="ItemDetailsPanel" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel" index="3"]
offset_left = -179.0
offset_top = -113.0
offset_right = -179.0
offset_bottom = -113.0

[node name="ColorRect" parent="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/ItemDetailsPanel" index="0"]
anchors_preset = -1
anchor_left = -0.004
anchor_top = -0.003
anchor_right = 2.282
anchor_bottom = 2.275
offset_left = 3.68
offset_top = 1.44
offset_right = -819.44
offset_bottom = -372.0

[node name="Moves" type="Control" parent="StatsPanel/Panel/TabbedView/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MoveListPanel" parent="StatsPanel/Panel/TabbedView/TabContainer/Moves" instance=ExtResource("6_w55pq")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.5
offset_top = -267.5
offset_right = 279.5
offset_bottom = 136.5

[node name="MoveDetailsPanel" parent="StatsPanel/Panel/TabbedView/TabContainer/Moves/MoveListPanel" index="2"]
anchors_preset = -1
anchor_left = -0.644
anchor_top = -0.442
anchor_right = -0.644
anchor_bottom = -0.442
offset_left = 0.640015
offset_top = 65.568
offset_right = 1280.64
offset_bottom = 876.825

[node name="Minions" type="Control" parent="StatsPanel/Panel/TabbedView/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MinionsPanel" parent="StatsPanel/Panel/TabbedView/TabContainer/Minions" instance=ExtResource("8_3o74c")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.5
offset_top = -267.5
offset_right = 279.5
offset_bottom = 266.5

[node name="VirtualKeyboard" parent="StatsPanel/Panel/TabbedView/TabContainer/Minions/MinionsPanel/MinionView" index="6"]
offset_left = -319.0
offset_top = 293.0
offset_right = 316.0
offset_bottom = 59.0

[node name="LevelUpLabel" type="RichTextLabel" parent="StatsPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 47.0
offset_right = 200.0
offset_bottom = 140.0
grow_horizontal = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0.0823529, 0.0862745, 0.294118, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]Level Up![/center]"

[node name="LevelUpPanel" type="Panel" parent="StatsPanel/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8jpyk")

[node name="NewLevelLabel" type="RichTextLabel" parent="StatsPanel/Panel/LevelUpPanel"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = 358.0
offset_right = 145.0
offset_bottom = 404.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("4_77yq4")
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "[center]Level 100![/center]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="StatsPanel/Panel/LevelUpPanel"]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_qpada")
}

[node name="EditMovesPanel" parent="StatsPanel/Panel" instance=ExtResource("9_ue80h")]
visible = false
layout_mode = 1

[connection signal="pressed" from="StatsPanel/Panel/SinglePageView/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="stats_saved" from="StatsPanel/Panel/SinglePageView/StatLinePanel" to="." method="_on_stat_line_panel_stats_saved"]
[connection signal="edit_moves" from="StatsPanel/Panel/SinglePageView/MoveListPanel" to="." method="_on_move_list_panel_edit_moves"]
[connection signal="move_details_visiblity_changed" from="StatsPanel/Panel/SinglePageView/MoveListPanel" to="." method="_on_move_list_panel_move_details_visiblity_changed"]
[connection signal="attempt_equip_armor" from="StatsPanel/Panel/SinglePageView/EquipmentPanel" to="." method="_on_equipment_panel_attempt_equip_armor"]
[connection signal="attempt_equip_weapon" from="StatsPanel/Panel/SinglePageView/EquipmentPanel" to="." method="_on_equipment_panel_attempt_equip_weapon"]
[connection signal="changed_minion_hovered" from="StatsPanel/Panel/SinglePageView/MinionsPanel" to="." method="_on_minions_panel_changed_minion_hovered"]
[connection signal="minion_auto_alloc_changed" from="StatsPanel/Panel/SinglePageView/MinionsPanel" to="." method="_on_minions_panel_minion_auto_alloc_changed"]
[connection signal="minion_renamed" from="StatsPanel/Panel/SinglePageView/MinionsPanel" to="." method="_on_minions_panel_minion_renamed"]
[connection signal="minions_reordered" from="StatsPanel/Panel/SinglePageView/MinionsPanel" to="." method="_on_minions_panel_minions_reordered"]
[connection signal="stats_clicked" from="StatsPanel/Panel/SinglePageView/MinionsPanel" to="." method="_on_minions_panel_stats_clicked"]
[connection signal="pressed" from="StatsPanel/Panel/TabbedView/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="stats_saved" from="StatsPanel/Panel/TabbedView/TabContainer/Stats/StatLinePanel" to="." method="_on_stat_line_panel_stats_saved"]
[connection signal="attempt_equip_armor" from="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel" to="." method="_on_equipment_panel_attempt_equip_armor"]
[connection signal="attempt_equip_weapon" from="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel" to="." method="_on_equipment_panel_attempt_equip_weapon"]
[connection signal="edit_moves" from="StatsPanel/Panel/TabbedView/TabContainer/Moves/MoveListPanel" to="." method="_on_move_list_panel_edit_moves"]
[connection signal="move_details_visiblity_changed" from="StatsPanel/Panel/TabbedView/TabContainer/Moves/MoveListPanel" to="." method="_on_move_list_panel_move_details_visiblity_changed"]
[connection signal="changed_minion_hovered" from="StatsPanel/Panel/TabbedView/TabContainer/Minions/MinionsPanel" to="." method="_on_minions_panel_changed_minion_hovered"]
[connection signal="minion_auto_alloc_changed" from="StatsPanel/Panel/TabbedView/TabContainer/Minions/MinionsPanel" to="." method="_on_minions_panel_minion_auto_alloc_changed"]
[connection signal="minion_renamed" from="StatsPanel/Panel/TabbedView/TabContainer/Minions/MinionsPanel" to="." method="_on_minions_panel_minion_renamed"]
[connection signal="stats_clicked" from="StatsPanel/Panel/TabbedView/TabContainer/Minions/MinionsPanel" to="." method="_on_minions_panel_stats_clicked"]
[connection signal="back_pressed" from="StatsPanel/Panel/EditMovesPanel" to="." method="_on_edit_moves_panel_back_pressed"]
[connection signal="replace_move" from="StatsPanel/Panel/EditMovesPanel" to="." method="_on_edit_moves_panel_replace_move"]

[editable path="StatsPanel/Panel/SinglePageView/MoveListPanel"]
[editable path="StatsPanel/Panel/SinglePageView/EquipmentPanel"]
[editable path="StatsPanel/Panel/SinglePageView/MinionsPanel"]
[editable path="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel"]
[editable path="StatsPanel/Panel/TabbedView/TabContainer/Equipment/EquipmentPanel/ItemDetailsPanel"]
[editable path="StatsPanel/Panel/TabbedView/TabContainer/Moves/MoveListPanel"]
[editable path="StatsPanel/Panel/TabbedView/TabContainer/Minions/MinionsPanel"]
